修正Java11版本删除sun.misc导致的编码异常，替换为Base64